--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,8 @@
  body{
  	background-color: white;
  	font-family: Segoe UI;
+ 	height:100%;
+ 	margin: 0;
  }
 
 img{
@@ -19,22 +21,44 @@ footer{
 	padding: 0 0 2% 0;
 }
 
+#container{
+	margin-left: 20%;
+}
+
  #header{
  	background-color: #11a6d7;
  	width:100%;
  	margin: auto;
+ 	margin-bottom: 2%;
  }
 
 #loginForm{
 	text-align: center;
+	margin-top: 2%;
 	background-color: rgb(209, 224, 240);
+	margin: auto;
+	width: 60%;
+	height: 81vh;
+	vertical-align: middle;
 }
 
 #formLogin{
-	padding-bottom:2%;
+	margin-bottom:2%;
+	vertical-align: middle;
+	display: table-cell;
+	border: none;
+	transform: translateY(50%);
+	width: 10%;
 }
 
 #loginButton{
 	margin-top: 2%;
 	width: 8%;
+	height:15%;
 }
+
+.loginInput{
+	width: 20%;
+}
+
+
