--- a/src/css/template.css
+++ b/src/css/template.css
@@ -80,7 +80,7 @@ li a, .dropbtn {
 }
 
 li a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
+    background-color: #4CAF50;
 }
 
 li.dropdown {
