Corrije pregunta default.
Se incrementa también el tamaño del text area para que se vea más
amplio.

--- a/src/css/template.css
+++ b/src/css/template.css
@@ -27,6 +27,12 @@ footer{
     clear: both;
 }
 
+textarea{
+    margin-top: 2%;
+    width: 400px;
+    height: 60px;
+}
+
 #container{
     margin-left: 0%;
 }
