--- a/src/css/template.css
+++ b/src/css/template.css
@@ -32,18 +32,19 @@ textarea {
     height: 60px;
 }
 
-#container {
-    margin-left: 0%;
+.container {
+    height: 100%;
+    position: relative;
+    margin-left: 0;
 }
 
-#header {
-    background-color: #11a6d7;
+.header {
+    height: 70px;
     width: 100%;
-    margin: auto;
-    margin-bottom: 2%;
+    background-color: #11a6d7;
 }
 
-#loginForm {
+.login-form {
     text-align: center;
     margin-top: 2%;
     background-color: rgb(209, 224, 240);
@@ -52,27 +53,25 @@ textarea {
     vertical-align: middle;
 }
 
-#logo {
-    float: left;
-}
-
-#contentContainer {
-    width: 95%;
-    padding-left: 5%;
+.logo {
+    position: absolute;
+    top: 0; bottom: 0; left: 0;
+    padding: 0;
+    padding-left: 10px;
 }
 
 /*
 * Contenido tabulado en pestañas.
 */
 
-#contentContainer {
+.content-container {
     width: 70%;
     margin: 0 auto;
 }
 
 ul.tabs {
-    margin: 0px;
-    padding: 0px;
+    padding: 0;
+    margin: 0;
     list-style: none;
 }
 
@@ -95,7 +94,7 @@ ul.tabs li.current {
     padding: 15px 15px 15px 30%;
 }
 
-.tab-content.current{
+.current{
     display: inherit;
 }
 
@@ -105,24 +104,44 @@ ul.tabs li.current {
 Navigation Bar style and dropdown.
 */
 
+.navigation-bar {
+    height: 100%;
+    position: absolute;
+    top: 0; right: 0; bottom: 0; left: 176px;
+}
+
 ul {
-    list-style-type: none;
-    margin: 0;
+    height: 100%;
     padding: 0;
+    margin: 0;
     overflow: hidden;
-    border: 1px solid #e7e7e7;
+    box-sizing: border-box;
+    list-style-type: none;
     background-color: #f3f3f3;
+    border-bottom: 1px solid #e7e7e7;
 }
 
 li {
-    float: left;
+    height: 100%;
+    display: inline-block;
+}
+
+.signout-item {
+    float: right;
 }
 
 li a {
     display: block;
-    color: #666;
+    padding: 0 16px;
+    line-height: 70px;
     text-align: center;
-    padding: 14px 16px;
+    text-decoration: none;
+    color: #666;
+}
+
+li a {
+    display: inline-block;
+    text-align: center;
     text-decoration: none;
 }
 
@@ -130,22 +149,11 @@ li a:hover{
     background-color: #ddd;
 }
 
-li a {
-    display: inline-block;
-    height: 33.06px;
-    text-align: center;
-    padding: 20px 16px;
-    text-decoration: none;
-}
-
-
 li a, .dropbtn {
     display: inline-block;
     text-align: center;
-    padding: 14px 16px;
     text-decoration: none;
 }
-
 
 li.dropdown {
     display: inline-block;
@@ -161,10 +169,11 @@ li.dropdown {
 
 .dropdown-content a {
     color: black;
-    padding: 12px 16px;
+    padding: 0 16px;
     text-decoration: none;
     display: block;
     text-align: left;
+    line-height: 40px;
 }
 
 .dropdown-content a:hover {
