--- a/src/css/template.css
+++ b/src/css/template.css
@@ -20,16 +20,24 @@ label {
 }
 
 footer {
-    background-color: rgb(245, 245, 245);
+    background-color: #F5F5F5;
     text-align: center;
-    padding: 0 0 2% 0;
-    clear: both;
+    margin-top: 20px;
+    padding: 10px 0;
+}
+
+footer p {
+    margin: 0;
 }
 
 textarea {
-    margin-top: 2%;
-    width: 400px;
     height: 60px;
+    width: 400px;
+    margin-top: 2%;
+}
+
+input[type='text'] {
+    height: 30px;
 }
 
 .container {
@@ -41,7 +49,7 @@ textarea {
 .header {
     height: 70px;
     width: 100%;
-    background-color: #11a6d7;
+    background-color: #11A6D7;
 }
 
 .login-form {
@@ -84,13 +92,13 @@ ul.tabs li {
 }
 
 ul.tabs li.current {
-    background: #ededed;
+    background: #EDEDED;
     color: #222;
 }
 
 .tab-content {
     display: none;
-    background: #ededed;
+    background: #EDEDED;
     padding: 15px 15px 15px 30%;
 }
 
@@ -117,8 +125,8 @@ ul {
     overflow: hidden;
     box-sizing: border-box;
     list-style-type: none;
-    background-color: #f3f3f3;
-    border-bottom: 1px solid #e7e7e7;
+    background-color: #F3F3F3;
+    border-bottom: 1px solid #E7E7E7;
 }
 
 li {
@@ -146,7 +154,7 @@ li a {
 }
 
 li a:hover{
-    background-color: #ddd;
+    background-color: #DDD;
 }
 
 li a, .dropbtn {
@@ -162,7 +170,7 @@ li.dropdown {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #F9F9F9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
@@ -177,7 +185,7 @@ li.dropdown {
 }
 
 .dropdown-content a:hover {
-    background-color: #f1f1f1
+    background-color: #F1F1F1
 }
 
 .dropdown:hover .dropdown-content {
