--- a/src/css/template.css
+++ b/src/css/template.css
@@ -1,7 +1,3 @@
-html {
-    visibility: hidden;
-}
-
 body {
     height: 100%;
     margin: 0;
@@ -117,7 +113,7 @@ header {
     height: 100%;
     width: 100%;
     position: relative;
-    background-color: #11A6D7;
+    background-color: #370A8F;
 }
 
 .logo {
@@ -185,7 +181,7 @@ li.dropdown {
     position: absolute;
     background-color: #F9F9F9;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     z-index: 1;
 }
 
