--- a/src/css/template.css
+++ b/src/css/template.css
@@ -5,100 +5,6 @@ body {
     font-family: Segoe UI;
 }
 
-section {
-    position: absolute;
-    top: 70px; right: 0; left: 0;
-}
-
-footer {
-    padding: 10px 0;
-    margin-top: 20px;
-    background-color: #F5F5F5;
-    text-align: center;
-}
-
-footer p {
-    margin: 0;
-}
-
-textarea {
-    height: 60px;
-    width: 400px;
-    margin-top: 2%;
-}
-
-.login-form {
-    text-align: center;
-    margin-top: 2%;
-    background-color: rgb(209, 224, 240);
-    margin: auto;
-    width: 60%;
-    vertical-align: middle;
-}
-
-/* -----------------------------------------------------------------------------------------------
-/ Contenido tabulado en pestañas
-/ ----------------------------------------------------------------------------------------------- */
-
-ul.tabs {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-
-ul.tabs li {
-    background: none;
-    color: #222;
-    display: inline-block;
-    padding: 10px 15px;
-    cursor: pointer;
-}
-
-ul.tabs li.current {
-    background-color: #EDEDED;
-    color: #222;
-}
-
-.tab-content {
-    display: none;
-}
-
-.current{
-    display: block;
-    padding: 20px 30px;
-    background-color: #EDEDED;
-}
-
-h2 {
-    margin-top: 0;
-}
-
-.input-wrapper {
-    margin-bottom: 20px;
-}
-
-.input-wrapper > label {
-    display: block;
-    margin-bottom: 5px;
-    letter-spacing: 0.5px;
-}
-
-input[type='text'], input[type='password'] {
-    height: 30px;
-    width: 250px;
-    box-sizing: border-box;
-    letter-spacing: 0.5px;
-    font-size: 13px;
-}
-
-button {
-    height: 30px;
-    width: 150px;
-    display: block;
-    margin: auto;
-    cursor: pointer;
-}
-
 /* -----------------------------------------------------------------------------------------------
 / Header
 / ----------------------------------------------------------------------------------------------- */
@@ -122,23 +28,23 @@ header {
     padding: 10px 0 0 10px;
 }
 
-.navigation-bar {
+.navigation-bar-wrapper {
     height: 100%;
     position: absolute;
     top: 0; right: 0; bottom: 0; left: 176px;
 }
 
-ul {
+.navigation-bar {
     height: 100%;
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
     list-style-type: none;
     background-color: #F3F3F3;
     border-bottom: 1px solid #E7E7E7;
+    overflow-x: hidden;
 }
 
-li {
+.navigation-bar li {
     height: 100%;
     display: inline-block;
 }
@@ -149,8 +55,9 @@ li {
 
 li a {
     display: block;
-    padding: 0 16px;
+    padding: 0 10px;
     line-height: 70px;
+    letter-spacing: 1px;
     text-align: center;
     text-decoration: none;
     color: #666;
@@ -163,7 +70,7 @@ li a {
 }
 
 li a:hover{
-    background-color: #DDD;
+    background-color: #D7CEE9;
 }
 
 li a, .dropbtn {
@@ -195,9 +102,122 @@ li.dropdown {
 }
 
 .dropdown-content a:hover {
-    background-color: #F1F1F1
+    background-color: #D7CEE9;
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
+}
+
+section {
+    position: absolute;
+    top: 70px; right: 0; left: 0;
+}
+
+footer {
+    padding: 10px 0;
+    margin-top: 20px;
+    background-color: #707070;
+    text-align: center;
+}
+
+footer p {
+    margin: 0;
+    letter-spacing: 0.5px;
+    color: white;
+}
+
+textarea {
+    height: 60px;
+    width: 400px;
+    margin-top: 2%;
+}
+
+.login-form {
+    text-align: center;
+    margin-top: 2%;
+    background-color: rgb(209, 224, 240);
+    margin: auto;
+    width: 60%;
+    vertical-align: middle;
+}
+
+/* -----------------------------------------------------------------------------------------------
+/ Tabs
+/ ----------------------------------------------------------------------------------------------- */
+
+ul.tabs {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    background-color: #7353B0;
+    color: white;
+}
+
+ul.tabs li {
+    background: none;
+    display: inline-block;
+    padding: 10px 15px;
+    cursor: pointer;
+    letter-spacing: 0.5px;
+}
+
+ul.tabs li.current {
+    background-color: #4B229A;
+}
+
+/* -----------------------------------------------------------------------------------------------
+/ Tab Content
+/ ----------------------------------------------------------------------------------------------- */
+
+.tab-content {
+    display: none;
+}
+
+.tab-content.current{
+    display: block;
+    padding: 20px 30px;
+    background-color: #F6F6F6;
+}
+
+h2 {
+    margin-top: 0;
+}
+
+.input-wrapper {
+    margin-bottom: 20px;
+}
+
+.input-wrapper > label {
+    display: block;
+    margin-bottom: 5px;
+    letter-spacing: 0.5px;
+}
+
+input[type='text'], input[type='password'] {
+    height: 30px;
+    width: 250px;
+    box-sizing: border-box;
+    letter-spacing: 0.5px;
+    font-size: 13px;
+}
+
+button {
+    height: 40px;
+    width: 200px;
+    display: block;
+    margin: auto;
+    background-color: #370A8F;
+    border: none;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+    font-size: 14px;
+    color: white;
+    cursor: pointer;
+}
+
+.feedback-text {
+    display: block;
+    margin-top: 10px;
+    text-align: center;
 }
