--- a/src/css/signin.css
+++ b/src/css/signin.css
@@ -28,19 +28,19 @@ section {
 }
 
 .form-wrapper {
-    height: 350px;
     width: 500px;
     position: relative;
     vertical-align: middle;
     margin: auto;
     margin-top: 50px;
-    background-color: #D1E0F0;
+    background-color: #F6F6F6;
+    border: 1px solid #E5E5E5;
     text-align: center;
     z-index: 1;
 }
 
 form {
-    padding: 20px 140px;
+    padding: 50px 140px;
     border: none;
 }
 
@@ -60,18 +60,25 @@ label {
     font-size: 16px;
 }
 
-input {
+input[type='text'], input[type='password'] {
     height: 30px;
     width: 100%;
     padding: 0 10px;
     box-sizing: border-box;
+    letter-spacing: 0.5px;
+    font-size: 13px;
 }
 
 button {
-    height: 30px;
-    width: 150px;
-    padding: 0;
+    height: 40px;
+    width: 200px;
     margin: 20px 10px;
+    background-color: #370A8F;
+    border: 0;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+    font-size: 12px;
+    color: white;
     cursor: pointer;
 }
 
@@ -81,4 +88,6 @@ footer {
     position: absolute;
     bottom: 0;
     text-align: center;
+    letter-spacing: 0.5px;
+    color: white;
 }
