--- a/src/css/template.css
+++ b/src/css/template.css
@@ -174,6 +174,8 @@ ul.tabs li.current {
 
 h2 {
     margin-top: 0;
+    color: #7353B0;
+    letter-spacing: 1px;
 }
 
 .input-wrapper {
@@ -189,6 +191,7 @@ h2 {
 input[type='text'], input[type='password'] {
     height: 30px;
     width: 250px;
+    padding: 0 5px;
     box-sizing: border-box;
     letter-spacing: 0.5px;
     font-size: 13px;
