--- a/src/css/template.css
+++ b/src/css/template.css
@@ -98,7 +98,7 @@ li.dropdown {
 }
 
 .dropdown-content a {
-    color: black;
+    color: #666;
     padding: 0 16px;
     text-decoration: none;
     display: block;
