--- a/src/css/reportes.css
+++ b/src/css/reportes.css
@@ -18,7 +18,13 @@
     vertical-align: top;
 }
 
-.chart1, .chart2, .chart3 {
+.chart1, .chart2 {
+    width: 48%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.chart3 {
     width: 700px;
     margin: 0 auto;
 }
