--- a/src/css/template.css
+++ b/src/css/template.css
@@ -127,7 +127,7 @@ section {
     top: 70px; right: 0; left: 0;
 }
 
-.panelistas-wrapper, .clientes-wrapper,
+.recursos-wrapper, .panelistas-wrapper, .clientes-wrapper,
 .admins-wrapper, .paneles-wrapper,
 .encuestas-wrapper, .preguntas-wrapper, .avances-wrapper, .liga-panel-wrapper {
     height: 100%;
