--- a/src/css/signin.css
+++ b/src/css/signin.css
@@ -67,6 +67,7 @@ input[type='text'], input[type='password'] {
     box-sizing: border-box;
     letter-spacing: 0.5px;
     font-size: 13px;
+    text-align: center;
 }
 
 button {
