--- a/src/css/template.css
+++ b/src/css/template.css
@@ -216,6 +216,10 @@ h2 {
     letter-spacing: 0.5px;
 }
 
+.input-wrapper > label > .required-input {
+    color: red;
+}
+
 input[type='text'], input[type='password'], textarea {
     box-sizing: border-box;
     letter-spacing: 0.5px;
