--- a/src/css/template.css
+++ b/src/css/template.css
@@ -10,6 +10,10 @@ body {
     font-family: Segoe UI;
 }
 
+.hidden {
+   display: none;
+}
+
 /* -----------------------------------------------------------------------------------------------
 / Header
 / ----------------------------------------------------------------------------------------------- */
