--- a/src/css/template.css
+++ b/src/css/template.css
@@ -14,6 +14,10 @@ body {
    display: none;
 }
 
+.alert {
+   color: #E05858;
+}
+
 /* -----------------------------------------------------------------------------------------------
 / Header
 / ----------------------------------------------------------------------------------------------- */
@@ -221,7 +225,7 @@ h2 {
 }
 
 .input-wrapper > label > .required-input {
-    color: red;
+    color: #E05858;
 }
 
 input[type='text'], input[type='password'], textarea {
