--- a/src/css/reportes.css
+++ b/src/css/reportes.css
@@ -38,18 +38,20 @@
     vertical-align: top;
 }
 
-.chart3, .chart4 {
-    width: 48%;
-    display: inline-block;
-    vertical-align: top;
-}
-
-/*.chart3 {
+.chart4 {
     width: 700px;
     margin: 0 auto;
-}*/
+}
 
 .filtros-button {
+    margin: 20px 0;
+    margin-bottom: 0;
+}
+
+select {
+    margin-bottom: 5px;
+}
+tros-button {
     margin: 20px 0;
     margin-bottom: 0;
 }
