--- a/src/css/template.css
+++ b/src/css/template.css
@@ -241,6 +241,10 @@ input[type='text'], input[type='password'] {
     padding: 0 5px;
 }
 
+.full-width {
+    width: 100% !important;
+}
+
 textarea {
     height: 100px;
     width: 100%;
