--- a/src/css/template.css
+++ b/src/css/template.css
@@ -154,8 +154,9 @@ section {
 }
 
 .avance-info {
-    display: inline-block;
+    text-align: right;
     margin-right: 20px;
+    color: #6265A7;
 }
 
 .panelistas-wrapper, .paneles-wrapper, .encuestas-wrapper, .liga-panel-wrapper {
