Pregunta - Vista previa
- Implements label and css of front end.

--- a/src/css/template.css
+++ b/src/css/template.css
@@ -336,3 +336,20 @@ table tbody tr td button {
     display: inline;
     align-items: center;
 }
+
+/* -----------------------------------------------------------------------------------------------
+/ Resources
+/ ----------------------------------------------------------------------------------------------- */
+.preview-resource {
+    overflow: hidden;
+}
+
+.video {
+    float: left;
+}
+
+.preview {
+    width: 50%;
+    float: right;
+    visibility: hidden;
+}
