Front-end buttons
- Implements front-end buttons.
- Renders one option at a time.

--- a/src/css/template.css
+++ b/src/css/template.css
@@ -349,3 +349,14 @@ table tbody tr td button {
     float: right;
     width: 40%;
 }
+
+
+.addOption, .removeOption {
+    float: right;
+    width: 5%;
+    height: 30px;
+}
+
+input[type='text'].optionWidth {
+    width: 90%;
+}
