--- a/src/css/template.css
+++ b/src/css/template.css
@@ -357,6 +357,10 @@ table tbody tr td button {
     height: 30px;
 }
 
+/* -----------------------------------------------------------------------------------------------
+/ Preguntas - Options
+/ ----------------------------------------------------------------------------------------------- */
+
 input[type='text'].optionWidth {
     width: 90%;
 }
