--- a/src/css/template.css
+++ b/src/css/template.css
@@ -351,7 +351,7 @@ table tbody tr td button {
 }
 
 
-.addOption, .removeOption {
+.addOption, .removeOption, .addSub, .removeSub {
     float: right;
     width: 5%;
     height: 30px;
