--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -24,7 +24,9 @@
 }
 
 /* Modal Body */
-.modal-body {padding: 2px 16px;}
+.modal-body {
+    padding: 2px 16px;
+}
 
 /* Modal Footer */
 .modal-footer {
@@ -40,7 +42,7 @@
     margin: auto;
     padding: 0;
     border: 1px solid #888;
-    width: 80%;
+    width: 50%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
@@ -111,8 +113,8 @@ hr {
     font-size: 110%;
 }
 
-.modalContent {
-    margin: 0% 35% 0% 5%;
+.modal-body {
+    margin-left: 5%;
 }
 
 .modalContent label {
