--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -44,10 +44,10 @@
     border: 1px solid #888;
     width: 50%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    -webkit-animation-name: animatetop;
+    /*-webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
     animation-name: animatetop;
-    animation-duration: 0.4s
+    animation-duration: 0.4s*/
 }
 
 /* The Close Button */
@@ -65,7 +65,7 @@
     cursor: pointer;
 }
 
-/* Add Animation */
+ /*Add Animation 
 @-webkit-keyframes animatetop {
     from {top: -300px; opacity: 0}
     to {top: 0; opacity: 1}
@@ -74,7 +74,7 @@
 @keyframes animatetop {
     from {top: -300px; opacity: 0}
     to {top: 0; opacity: 1}
-}
+}*/
 
 /* -----------------------------------------------------------------------------------------------
 / Preguntas - Modal Contents
