--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -19,7 +19,7 @@
 /* Modal Header */
 .modal-header {
     padding: 2px 16px;
-    background-color: #F3F3F3;
+    background-color: #EEEFF0;
     color: white;
 }
 
@@ -31,7 +31,7 @@
 /* Modal Footer */
 .modal-footer {
     padding: 2px 16px;
-    background-color: #F3F3F3;
+    background-color: #EEEFF0;
     color: white;
 }
 
